--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,16 @@
             <version>2.9.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
         <!-- 一些杂七杂八的依赖 -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-guava</artifactId>
-            <version>2.8.8</version>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.dozer</groupId>
