--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.logibeat.cloud</groupId>
     <artifactId>logibeat-common</artifactId>
-    <version>1.0-RELEASE</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
